<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@string/logo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        android:src="@drawable/wallpaper"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:layout_centerHorizontal="true"
        android:layout_width="254dp"
        android:layout_height="100dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/artiex"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="78dp"
        tools:layout_editor_absoluteY="0dp" />

    <LinearLayout
        android:orientation="vertical"
        android:background="#6A525550"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="90dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        tools:ignore="MissingConstraints">


        <TextView
            android:id="@+id/Description"
            android:background="#A99A8282"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cabin"
            android:padding="10dp"
            android:text="@string/description_we_are_an_artificial_intelligence_company_where_we_design_applications_that_help_people_with_their_daily_lives_welcome_to_our_application"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/code"
            android:scaleType="centerCrop"
            android:cropToPadding="true"
            android:contentDescription="@string/code_image"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#C8A9C3D5"
            android:fontFamily="@font/cabin"
            android:padding="10dp"
            android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_minim_veniam_quis_nostrud_exercitation_ullamco_laboris_nisi_ut_aliquip_ex_ea_commodo_consequat_duis_aute_irure_dolor_in_reprehenderit_in_voluptate_velit_esse_cillum_dolore_eu_fugiat_nulla_pariatur_excepteur_sint_occaecat_cupidatat_non_proident_sunt_in_culpa_qui_officia_deserunt_mollit_anim_id_est_laborum"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="visible"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#C86F7EC8"
            android:fontFamily="@font/cabin"
            android:padding="4dp"
            android:text="@string/contact_us"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#C86F7EC8"
            android:fontFamily="@font/cabin"
            android:padding="4dp"
            android:text="@string/email_support_artiex_com_nr_31_1234567890"
            android:textColor="@color/white"
            android:textSize="15sp"
            tools:ignore="HardcodedText,MissingConstraints" />

    </LinearLayout>






</RelativeLayout>